--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -70,7 +70,7 @@
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
 <p><span id="A_word_about_the_3D_space"></span>
 N&#283;kolik slov o 3D prostoru
-</p><p>If you are new to 3D modeling applications, it's essential to understand some fundamental concepts before proceeding. If you already have experience with such software, you may skip this introduction.
+</p><p>Pokud jste v oblasti 3D modelov&aacute;n&iacute; nov&aacute;&#269;kem, je p&#345;ed pokra&#269;ov&aacute;n&iacute;m nezbytn&eacute; porozum&#283;t n&#283;kter&yacute;m z&aacute;kladn&iacute;m pojm&#367;m. Pokud ji&#382; m&aacute;te s t&iacute;mto softwarem zku&scaron;enosti, m&#367;&#382;ete tento &uacute;vod p&#345;esko&#269;it.
 </p><p>FreeCAD operates within a three-dimensional <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Euclidean_space">Euclidean space</a> which centers around an origin point defined by three axes: X, Y, and Z. Typically, when viewing from above in FreeCAD, the X axis extends horizontally to the right, the Y axis extends towards the back, and the Z axis moves vertically upwards. The intersection point of these axes, where each coordinate is zero, is known as the origin.
 </p><p>Every location in FreeCAD's space is determined by (x, y, z) coordinates. For instance, a point located at coordinates (2,3,1) is positioned 2 units along the X axis, 3 units along the Y axis, and 1 unit along the Z axis. Navigating this space is akin to manipulating a camera. You can move the camera left, right, up, or down (panning), swivel it around the focal point (rotating), or move it closer to or away from objects (zooming), allowing you to explore your design from various perspectives.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=3dspace_coordinates.jpg&amp;filetimestamp=20151213200233&amp;.html" class="mw-file-description"><img src="../File/3dspace_coordinates.jpg" decoding="async" width="640" height="375" class="mw-file-element" data-file-width="640" data-file-height="375"></a></span>
@@ -272,12 +272,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033612
+Cached time: 20260112033638
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.185 seconds
-Real time usage: 0.276 seconds
+CPU time usage: 0.177 seconds
+Real time usage: 0.267 seconds
 Preprocessor visited node count: 1261/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -288,16 +288,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.285      1 -total
- 40.29%   10.590     15 Template:ASCII
- 27.35%    7.188      1 Template:Manual:TOC
- 19.43%    5.106      1 Manual:Summary/cs
-  8.91%    2.341      2 Template:Docnav
-  7.44%    1.956     34 Template:KEY
-  5.52%    1.450      2 Template:Version
+100.00%   31.870      1 -total
+ 41.59%   13.256     15 Template:ASCII
+ 19.53%    6.224      1 Template:Manual:TOC
+ 15.51%    4.943      2 Template:Docnav
+ 14.90%    4.749      1 Manual:Summary/cs
+  7.42%    2.365     34 Template:KEY
+  4.11%    1.310      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033612 and revision id 1737056. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033637 and revision id 1737058. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
