--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -72,7 +72,7 @@
 N&#283;kolik slov o 3D prostoru
 </p><p>Pokud jste v oblasti 3D modelov&aacute;n&iacute; nov&aacute;&#269;kem, je p&#345;ed pokra&#269;ov&aacute;n&iacute;m nezbytn&eacute; porozum&#283;t n&#283;kter&yacute;m z&aacute;kladn&iacute;m pojm&#367;m. Pokud ji&#382; m&aacute;te s t&iacute;mto softwarem zku&scaron;enosti, m&#367;&#382;ete tento &uacute;vod p&#345;esko&#269;it.
 </p><p>FreeCAD pracuje ve t&#345;&iacute;rozm&#283;rn&eacute;m <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Euclidean_space">euklidovsk&eacute;m prostoru</a>,  jeho&#382; st&#345;edem je po&#269;&aacute;te&#269;n&iacute; bod definovan&yacute; t&#345;emi osami: X, Y a Z. P&#345;i pohledu shora ve FreeCADu se osa X obvykle rozprost&iacute;r&aacute; vodorovn&#283; doprava, osa Y sm&#283;rem dozadu a osa Z svisle nahoru. Pr&#367;se&#269;&iacute;k t&#283;chto os, kde jsou v&scaron;echny sou&#345;adnice nulov&eacute;, se naz&yacute;v&aacute; po&#269;&aacute;tek.
-</p><p>Every location in FreeCAD's space is determined by (x, y, z) coordinates. For instance, a point located at coordinates (2,3,1) is positioned 2 units along the X axis, 3 units along the Y axis, and 1 unit along the Z axis. Navigating this space is akin to manipulating a camera. You can move the camera left, right, up, or down (panning), swivel it around the focal point (rotating), or move it closer to or away from objects (zooming), allowing you to explore your design from various perspectives.
+</p><p>Ka&#382;d&aacute; poloha v prostoru FreeCADu je ur&#269;ena sou&#345;adnicemi (x, y, z). Nap&#345;&iacute;klad bod se sou&#345;adnicemi (2,3,1) je um&iacute;st&#283;n 2 jednotky pod&eacute;l osy X, 3 jednotky pod&eacute;l osy Y a 1 jednotku pod&eacute;l osy Z. Navigace v tomto prostoru je podobn&aacute; manipulaci s kamerou. Kameru m&#367;&#382;ete posouvat doleva, doprava, nahoru nebo dol&#367; (posouv&aacute;n&iacute;), ot&aacute;&#269;et ji kolem ohniska (ot&aacute;&#269;en&iacute;) nebo ji p&#345;ibli&#382;ovat a oddalovat od objekt&#367; (zoomov&aacute;n&iacute;), co&#382; v&aacute;m umo&#382;&#328;uje prozkoumat v&aacute;&scaron; n&aacute;vrh z r&#367;zn&yacute;ch perspektiv.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=3dspace_coordinates.jpg&amp;filetimestamp=20151213200233&amp;.html" class="mw-file-description"><img src="../File/3dspace_coordinates.jpg" decoding="async" width="640" height="375" class="mw-file-element" data-file-width="640" data-file-height="375"></a></span>
 </p>
 <meta property="mw:PageProp/toc">
@@ -272,12 +272,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033737
+Cached time: 20260112033754
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.192 seconds
-Real time usage: 0.279 seconds
+CPU time usage: 0.181 seconds
+Real time usage: 0.268 seconds
 Preprocessor visited node count: 1261/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -288,16 +288,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.298      1 -total
- 40.90%   11.573     15 Template:ASCII
- 24.56%    6.951      1 Template:Manual:TOC
- 19.88%    5.626      1 Manual:Summary/cs
-  8.66%    2.450     34 Template:KEY
-  8.33%    2.357      2 Template:Docnav
-  6.65%    1.883      2 Template:Version
+100.00%   39.136      1 -total
+ 43.51%   17.030     15 Template:ASCII
+ 24.39%    9.545      1 Template:Manual:TOC
+ 18.84%    7.373      1 Manual:Summary/cs
+  9.08%    3.555     34 Template:KEY
+  6.50%    2.545      2 Template:Version
+  6.07%    2.374      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033737 and revision id 1737060. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033754 and revision id 1737062. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
