--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -74,9 +74,10 @@ N&#283;kolik slov o 3D prostoru
 </p><p>FreeCAD pracuje ve t&#345;&iacute;rozm&#283;rn&eacute;m <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Euclidean_space">euklidovsk&eacute;m prostoru</a>,  jeho&#382; st&#345;edem je po&#269;&aacute;te&#269;n&iacute; bod definovan&yacute; t&#345;emi osami: X, Y a Z. P&#345;i pohledu shora ve FreeCADu se osa X obvykle rozprost&iacute;r&aacute; vodorovn&#283; doprava, osa Y sm&#283;rem dozadu a osa Z svisle nahoru. Pr&#367;se&#269;&iacute;k t&#283;chto os, kde jsou v&scaron;echny sou&#345;adnice nulov&eacute;, se naz&yacute;v&aacute; po&#269;&aacute;tek.
 </p><p>Ka&#382;d&aacute; poloha v prostoru FreeCADu je ur&#269;ena sou&#345;adnicemi (x, y, z). Nap&#345;&iacute;klad bod se sou&#345;adnicemi (2,3,1) je um&iacute;st&#283;n 2 jednotky pod&eacute;l osy X, 3 jednotky pod&eacute;l osy Y a 1 jednotku pod&eacute;l osy Z. Navigace v tomto prostoru je podobn&aacute; manipulaci s kamerou. Kameru m&#367;&#382;ete posouvat doleva, doprava, nahoru nebo dol&#367; (posouv&aacute;n&iacute;), ot&aacute;&#269;et ji kolem ohniska (ot&aacute;&#269;en&iacute;) nebo ji p&#345;ibli&#382;ovat a oddalovat od objekt&#367; (zoomov&aacute;n&iacute;), co&#382; v&aacute;m umo&#382;&#328;uje prozkoumat v&aacute;&scaron; n&aacute;vrh z r&#367;zn&yacute;ch perspektiv.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=3dspace_coordinates.jpg&amp;filetimestamp=20151213200233&amp;.html" class="mw-file-description"><img src="../File/3dspace_coordinates.jpg" decoding="async" width="640" height="375" class="mw-file-element" data-file-width="640" data-file-height="375"></a></span>
+</p><p><span id="The_FreeCAD_3D_View"></span>
 </p>
 <meta property="mw:PageProp/toc">
-<h3><span class="mw-headline" id="The_FreeCAD_3D_View">The FreeCAD 3D View</span></h3>
+<h3><span class="mw-headline" id="3D_pohled_FreeCADu">3D pohled FreeCADu</span></h3>
 <h4><span class="mw-headline" id="Mouse_navigation">Mouse navigation</span></h4>
 <p>Navigating the <a href="../3D_View.html" title="3D View">3D View</a> in FreeCAD can be achieved using various inputs including a mouse, a Space Navigator device, keyboard shortcuts, a touchpad, or any combination thereof. FreeCAD offers a range of <a href="../Mouse_navigation.html" title="Mouse navigation">navigation styles</a> that define how the three fundamental viewing operations&mdash;pan, rotate, and zoom&mdash;are executed. Additionally, these styles govern how objects are selected within the workspace. To access and switch between these navigation styles, you can navigate to the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a> or simply right-click in the <a href="../3D_View.html" title="3D View">3D View</a>. Additionally, there is a third, more immediate option for altering the navigation style directly from the user interface located in the lower-right part of the screen.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_NavigationMethod.png&amp;filetimestamp=20240614135438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_NavigationMethod.png" decoding="async" width="1882" height="1083" class="mw-file-element" data-file-width="1882" data-file-height="1083"></a></span>
@@ -272,13 +273,13 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033754
+Cached time: 20260112033822
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.181 seconds
+CPU time usage: 0.191 seconds
 Real time usage: 0.268 seconds
-Preprocessor visited node count: 1261/1000000
+Preprocessor visited node count: 1262/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
@@ -288,16 +289,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.136      1 -total
- 43.51%   17.030     15 Template:ASCII
- 24.39%    9.545      1 Template:Manual:TOC
- 18.84%    7.373      1 Manual:Summary/cs
-  9.08%    3.555     34 Template:KEY
-  6.50%    2.545      2 Template:Version
-  6.07%    2.374      2 Template:Docnav
+100.00%   34.335      1 -total
+ 37.01%   12.709     15 Template:ASCII
+ 24.04%    8.254      1 Template:Manual:TOC
+ 19.74%    6.778      1 Manual:Summary/cs
+ 15.71%    5.395      2 Template:Version
+  9.70%    3.332     34 Template:KEY
+  5.20%    1.787      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033754 and revision id 1737062. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033822 and revision id 1737064. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
