--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -78,7 +78,9 @@ N&#283;kolik slov o 3D prostoru
 </p>
 <meta property="mw:PageProp/toc">
 <h3><span class="mw-headline" id="3D_pohled_FreeCADu">3D pohled FreeCADu</span></h3>
-<h4><span class="mw-headline" id="Mouse_navigation">Mouse navigation</span></h4>
+<p><span id="Mouse_navigation"></span>
+</p>
+<h4><span id="Navigace_my.C5.A1.C3.AD"></span><span class="mw-headline" id="Navigace_my&scaron;&iacute;">Navigace my&scaron;&iacute;</span></h4>
 <p>Navigating the <a href="../3D_View.html" title="3D View">3D View</a> in FreeCAD can be achieved using various inputs including a mouse, a Space Navigator device, keyboard shortcuts, a touchpad, or any combination thereof. FreeCAD offers a range of <a href="../Mouse_navigation.html" title="Mouse navigation">navigation styles</a> that define how the three fundamental viewing operations&mdash;pan, rotate, and zoom&mdash;are executed. Additionally, these styles govern how objects are selected within the workspace. To access and switch between these navigation styles, you can navigate to the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a> or simply right-click in the <a href="../3D_View.html" title="3D View">3D View</a>. Additionally, there is a third, more immediate option for altering the navigation style directly from the user interface located in the lower-right part of the screen.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_NavigationMethod.png&amp;filetimestamp=20240614135438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_NavigationMethod.png" decoding="async" width="1882" height="1083" class="mw-file-element" data-file-width="1882" data-file-height="1083"></a></span>
 </p><p>Each of these styles allocates different mouse buttons, or mouse + keyboard combinations, or mouse gestures, to these four operations. The following table shows the principal available styles. Keyboard keys and mouse buttons indicated in magenta must be held down.
@@ -273,13 +275,13 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033822
+Cached time: 20260112033846
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.191 seconds
-Real time usage: 0.268 seconds
-Preprocessor visited node count: 1262/1000000
+CPU time usage: 0.164 seconds
+Real time usage: 0.241 seconds
+Preprocessor visited node count: 1263/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
 Highest expansion depth: 7/100
@@ -289,16 +291,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.335      1 -total
- 37.01%   12.709     15 Template:ASCII
- 24.04%    8.254      1 Template:Manual:TOC
- 19.74%    6.778      1 Manual:Summary/cs
- 15.71%    5.395      2 Template:Version
-  9.70%    3.332     34 Template:KEY
-  5.20%    1.787      2 Template:Docnav
+100.00%   29.681      1 -total
+ 37.47%   11.122     15 Template:ASCII
+ 24.13%    7.162      1 Template:Manual:TOC
+ 19.01%    5.643      1 Manual:Summary/cs
+ 17.74%    5.267      2 Template:Version
+  6.42%    1.905     34 Template:KEY
+  5.68%    1.686      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033822 and revision id 1737064. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033845 and revision id 1737066. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
