--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -81,7 +81,7 @@ N&#283;kolik slov o 3D prostoru
 <p><span id="Mouse_navigation"></span>
 </p>
 <h4><span id="Navigace_my.C5.A1.C3.AD"></span><span class="mw-headline" id="Navigace_my&scaron;&iacute;">Navigace my&scaron;&iacute;</span></h4>
-<p>Navigating the <a href="../3D_View.html" title="3D View">3D View</a> in FreeCAD can be achieved using various inputs including a mouse, a Space Navigator device, keyboard shortcuts, a touchpad, or any combination thereof. FreeCAD offers a range of <a href="../Mouse_navigation.html" title="Mouse navigation">navigation styles</a> that define how the three fundamental viewing operations&mdash;pan, rotate, and zoom&mdash;are executed. Additionally, these styles govern how objects are selected within the workspace. To access and switch between these navigation styles, you can navigate to the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a> or simply right-click in the <a href="../3D_View.html" title="3D View">3D View</a>. Additionally, there is a third, more immediate option for altering the navigation style directly from the user interface located in the lower-right part of the screen.
+<p>Navigace ve <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a> v programu FreeCAD lze prov&aacute;d&#283;t pomoc&iacute; r&#367;zn&yacute;ch vstupn&iacute;ch za&#345;&iacute;zen&iacute;, v&#269;etn&#283; my&scaron;i, za&#345;&iacute;zen&iacute; Space Navigator, kl&aacute;vesov&yacute;ch zkratek, touchpadu nebo jak&eacute;koli jejich kombinace. FreeCAD nab&iacute;z&iacute; &#345;adu <a href="../Mouse_navigation.html" title="Mouse navigation">styl&#367; navigace</a>, kter&eacute; definuj&iacute; zp&#367;sob prov&aacute;d&#283;n&iacute; t&#345;&iacute; z&aacute;kladn&iacute;ch operac&iacute; zobrazen&iacute; &ndash; posouv&aacute;n&iacute;, ot&aacute;&#269;en&iacute; a p&#345;ibli&#382;ov&aacute;n&iacute;. Tyto styly nav&iacute;c ur&#269;uj&iacute;, jak se objekty vyb&iacute;raj&iacute; v pracovn&iacute;m prostoru. Chcete-li p&#345;istupovat k t&#283;mto styl&#367;m navigace a p&#345;ep&iacute;nat mezi nimi, m&#367;&#382;ete p&#345;ej&iacute;t do <a href="../Preferences_Editor.html" title="Preferences Editor">editoru p&#345;edvoleb</a> nebo jednodu&scaron;e kliknout prav&yacute;m tla&#269;&iacute;tkem my&scaron;i ve <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a>. Krom&#283; toho existuje t&#345;et&iacute;, bezprost&#345;edn&#283;j&scaron;&iacute; mo&#382;nost zm&#283;ny stylu navigace p&#345;&iacute;mo z u&#382;ivatelsk&eacute;ho rozhran&iacute; um&iacute;st&#283;n&eacute;ho v prav&eacute; doln&iacute; &#269;&aacute;sti obrazovky.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_NavigationMethod.png&amp;filetimestamp=20240614135438&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_NavigationMethod.png" decoding="async" width="1882" height="1083" class="mw-file-element" data-file-width="1882" data-file-height="1083"></a></span>
 </p><p>Each of these styles allocates different mouse buttons, or mouse + keyboard combinations, or mouse gestures, to these four operations. The following table shows the principal available styles. Keyboard keys and mouse buttons indicated in magenta must be held down.
 </p>
@@ -275,12 +275,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112033846
+Cached time: 20260112034217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.164 seconds
-Real time usage: 0.241 seconds
+CPU time usage: 0.176 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 1263/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -291,16 +291,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.681      1 -total
- 37.47%   11.122     15 Template:ASCII
- 24.13%    7.162      1 Template:Manual:TOC
- 19.01%    5.643      1 Manual:Summary/cs
- 17.74%    5.267      2 Template:Version
-  6.42%    1.905     34 Template:KEY
-  5.68%    1.686      2 Template:Docnav
+100.00%   23.031      1 -total
+ 40.69%    9.372     15 Template:ASCII
+ 29.10%    6.703      1 Template:Manual:TOC
+ 24.43%    5.627      1 Manual:Summary/cs
+  8.18%    1.885     34 Template:KEY
+  7.59%    1.749      2 Template:Docnav
+  4.14%    0.954      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112033845 and revision id 1737066. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112034217 and revision id 1737068. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
