--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -101,7 +101,7 @@ N&#283;kolik slov o 3D prostoru
 <tr>
 <td>Blender
 </td>
-<td><span typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description" title="Kliknut&iacute; lev&yacute;m tla&#269;&iacute;tkem my&scaron;i"><img alt="Kliknut&iacute; lev&yacute;m tla&#269;&iacute;tkem my&scaron;i" src="../File/Mouse_LMB.svg" decoding="async" width="48" height="69" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>]
+<td><span typeof="mw:File"><a href="../index.php?title=Mouse_LMB.svg&amp;filetimestamp=20181210182920&amp;.html" class="mw-file-description" title="Kliknut&iacute; lev&yacute;m tla&#269;&iacute;tkem my&scaron;i"><img alt="Kliknut&iacute; lev&yacute;m tla&#269;&iacute;tkem my&scaron;i" src="../File/Mouse_LMB.svg" decoding="async" width="48" height="69" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description" title="Rolov&aacute;n&iacute; prost&#345;edn&iacute;m tla&#269;&iacute;tkem my&scaron;i"><img alt="Rolov&aacute;n&iacute; prost&#345;edn&iacute;m tla&#269;&iacute;tkem my&scaron;i" src="../File/Mouse_MMB_rotate.svg" decoding="async" width="48" height="69" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
@@ -277,12 +277,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112044445
+Cached time: 20260112044614
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.186 seconds
-Real time usage: 0.531 seconds
+CPU time usage: 0.177 seconds
+Real time usage: 0.208 seconds
 Preprocessor visited node count: 1264/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -293,16 +293,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.064      1 -total
- 45.57%   37.395     15 Template:ASCII
- 27.39%   22.481      1 Template:Manual:TOC
- 21.12%   17.336      1 Manual:Summary/cs
- 12.42%   10.191      2 Template:Docnav
-  3.98%    3.267     34 Template:KEY
-  3.67%    3.015      2 Template:Version
+100.00%   21.244      1 -total
+ 44.19%    9.387     15 Template:ASCII
+ 22.61%    4.804      1 Template:Manual:TOC
+ 16.52%    3.509      1 Manual:Summary/cs
+  8.54%    1.815      2 Template:Docnav
+  8.29%    1.760     34 Template:KEY
+  4.54%    0.964      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112044445 and revision id 1737072. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112044614 and revision id 1737074. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
