--- a/wiki/cs/Manual;Navigating_in_the_3D_View.html
+++ b/wiki/cs/Manual;Navigating_in_the_3D_View.html
@@ -231,7 +231,7 @@ N&#283;kolik slov o 3D prostoru
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> + <span typeof="mw:File"><a href="../index.php?title=Touchpad.svg&amp;filetimestamp=20181210232726&amp;.html" class="mw-file-description" title="Ukazatel touchpadu (my&scaron;i)"><img alt="Ukazatel touchpadu (my&scaron;i)" src="../File/Touchpad.svg" decoding="async" width="48" height="48" class="mw-file-element" data-file-width="71" data-file-height="71"></a></span>
 </td></tr></tbody></table>
 </div>
-<p>It's worth noting that when a user hovers over the navigation styles menu located at the bottom right of the screen, a tooltip will appear. This tooltip provides a brief description of the highlighted navigation style, offering immediate guidance on its use.
+<p>Stoj&iacute; za zm&iacute;nku, &#382;e kdy&#382; u&#382;ivatel najede kurzorem my&scaron;i na nab&iacute;dku styl&#367; navigace v prav&eacute;m doln&iacute;m rohu obrazovky, zobraz&iacute; se n&aacute;pov&#283;da. Tato n&aacute;pov&#283;da obsahuje stru&#269;n&yacute; popis zv&yacute;razn&#283;n&eacute;ho stylu navigace a poskytuje okam&#382;it&eacute; pokyny k jeho pou&#382;it&iacute;.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_NavigationHover.png&amp;filetimestamp=20240614201405&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_NavigationHover.png" decoding="async" width="1575" height="808" class="mw-file-element" data-file-width="1575" data-file-height="808"></a></span>
 </p>
 <h4><span class="mw-headline" id="Keyboard_navigation">Keyboard navigation</span></h4>
@@ -277,12 +277,12 @@ N&#283;kolik slov o 3D prostoru
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112044614
+Cached time: 20260112044649
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.208 seconds
+CPU time usage: 0.156 seconds
+Real time usage: 0.201 seconds
 Preprocessor visited node count: 1264/1000000
 Post&#8208;expand include size: 21822/2097152 bytes
 Template argument size: 854/2097152 bytes
@@ -293,16 +293,16 @@ Unstrip post&#8208;expand size: 2958/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.244      1 -total
- 44.19%    9.387     15 Template:ASCII
- 22.61%    4.804      1 Template:Manual:TOC
- 16.52%    3.509      1 Manual:Summary/cs
-  8.54%    1.815      2 Template:Docnav
-  8.29%    1.760     34 Template:KEY
-  4.54%    0.964      2 Template:Version
+100.00%   25.039      1 -total
+ 39.30%    9.840     15 Template:ASCII
+ 26.25%    6.572      1 Template:Manual:TOC
+ 21.14%    5.294      1 Manual:Summary/cs
+  9.86%    2.469     34 Template:KEY
+  7.11%    1.781      2 Template:Docnav
+  6.31%    1.581      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112044614 and revision id 1737074. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410670-0!canonical and timestamp 20260112044649 and revision id 1737076. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
