--- a/wiki/cs/Manual;The_FreeCAD_document.html
+++ b/wiki/cs/Manual;The_FreeCAD_document.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="Manuale: I documenti di FreeCAD (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="Podr&#281;cznik:Struktura dokumentu FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--med" title="Manual: documentul FreeCAD (33% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1056;&#1091;&#1082;&#1086;&#1074;&#1086;&#1076;&#1089;&#1090;&#1074;&#1086;:&#1044;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; FreeCAD (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--med" title="Manual: FreeCAD &#25991;&#26723;&#25163;&#20876; (56% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Manual;The_FreeCAD_document.html" class="mw-pt-progress mw-pt-progress--med" title="&#12510;&#12491;&#12517;&#12450;&#12523;&#65306;FreeCAD&#12398;&#12501;&#12449;&#12452;&#12523;&#24418;&#24335; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -87,29 +87,29 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112051036
+Cached time: 20260112051117
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.047 seconds
-Real time usage: 0.074 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.076 seconds
 Preprocessor visited node count: 79/1000000
 Post&#8208;expand include size: 8274/2097152 bytes
 Template argument size: 704/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2639/5000000 bytes
+Unstrip post&#8208;expand size: 2643/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.109      1 -total
- 72.82%    5.177      1 Template:Manual:TOC
- 56.34%    4.005      1 Manual:Summary/cs
- 23.83%    1.694      2 Template:Docnav
+100.00%    8.046      1 -total
+ 72.65%    5.845      1 Template:Manual:TOC
+ 57.23%    4.605      1 Manual:Summary/cs
+ 22.88%    1.841      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112051036 and revision id 1737122. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410698-0!canonical and timestamp 20260112051117 and revision id 1737122. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
